# zz_future_focus

./: .gitignore  CLAUDE.md  EXAMPLES_SUMMARY.md  README.md  index.html  requirements.txt  setup.sh
.claude/commands/: tier-wizard.md
br2/tier_0/: tier_0_cldchoice_br2_capture.md  tier_0_toy_ios_shortcuts_br2_voice_capture.md
br2/tier_1/: tier_1_toy_n8n_br2_daily_review.json
br2/tier_2/: tier_2_cldchoice_br2_smart_categorizer.json  tier_2_toy_n8n_br2_inbox_triage.json  tier_2_toy_n8n_br2_inbox_triage_setup.md
br2/tier_3/: .env.template  tier_3_toy_langchain_br2_note_connector.py  tier_3_toy_langchain_br2_note_connector_setup.md
br2/tier_4/: .env.template  requirements.txt  tier_4_toy_langgraph_br2_topic_synthesis_setup.md
br2/tier_5/: tier_5_toy_claude_code_br2_report_synthesis.py
br2/tier_6/: tier_6_toy_autonomous_br2_knowledge_curator.py
br2/toolkit/: README.md
flashcards/: cards.json  index.html  styles.css  sw.js
focus_future/intake_system_general/: README.md  intake_database_schema.sql  intake_form_template.md  requirements.txt  submission_guide.md  submit_workflow.py
get_started/: QUICKSTART.md  setup.ps1
greek_flashcards/: app.js  cards.json  index.html  manifest.webmanifest  styles.css  sw.js
gtm/: README.md  REORGANIZATION_SUMMARY.md
gtm/competitive_intelligence/: README.md  competitor_research_agent.py
gtm/customer_success/: README.md
gtm/find_decision_makers/: README.md  decision_maker_orchestrator.json
gtm/funnel_health/: README.md  daily_metrics_digest.json
gtm/lead_enrichment/: README.md
gtm/lead_routing/: README.md  email_routing_classifier.json
gtm/lead_sequencing/: README.md  multi_agent_campaign_planner.py  personalized_email_generator_toy_setup.md  website_visitor_outreach.md
gtm/market_intelligence/: README.md
gtm/partnership_marketing/: README.md
gtm/product_launch/: README.md  product_launch_orchestrator.py
gtm/production-ready-examples/: 02_two_way_crm_enrichment.md  04_automate_prospecting_with_clay.md  06_customer_feedback_analysis.md  07_custom_hubspot_integration.md  tool_scorer.py
gtm/reputation_management/: README.md  google_review_screenshots.md
gtm/segmentation_targeting/: README.md
gtm/tam_accounts/: README.md  icp_account_finder_agent.py  multi_agent_fit_scoring.md
gtm/tier_0/: tier_0_toy_ios_shortcuts_gtm_lead_capture.md
gtm/tier_1/: tier_1_toy_n8n_gtm_daily_metrics.json  tier_1_toy_n8n_gtm_daily_metrics_setup.md
gtm/tier_2/: tier_2_cldchoice_gtm_intent_detection.json  tier_2_cldchoice_gtm_lead_research.json  (+2 more)
history_flashcards/: app.js  cards.json  manifest.webmanifest  sw.js
law/browser_dark_patterns/: .env.sample  .gitignore  README.md  pyproject.toml
law/browser_dark_patterns/src/agent/: analyzer.py  navigator.py
law/browser_dark_patterns/src/evidence/: collector.py
law/browser_dark_patterns/src/frameworks/: attention_economy.py  dsa_article_28.py  ico_aadc.py  ieee_7010.py
law/browser_dark_patterns/src/utils/: browser.py  storage.py
law/browser_dark_patterns/src/web/: app.py
law/browser_dark_patterns/src/web/templates/: index.html
law/browser_dark_patterns/tests/: test_frameworks.py
ml_flashcards/: app.js  build_cards.py  build_icons.py  cards.json  index.html  manifest.webmanifest  styles.css  sw.js  verify.js
utilities/: tier_routing_wizard.md
(+266 files in other folders)
